tests/syntax_tests/data/parsing/errors/expressions/labelledArgumentMissingEqual.res
let _ = fn(~foo:1)
let _ = fn(~bar:?value)
